base/grafana/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: zcp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: grafana
  template:
    metadata:
      labels:
        component: grafana
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: node-role.kubernetes.io/management
                operator: Exists
      containers:
      - image: au.icr.io/cloudzcp/grafana:6.7.0
        name: grafana
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
          name: grafana
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: storage
        - mountPath: /etc/grafana
          name: config
        - mountPath: /var/lib/grafana/dashboards/system
          name: dashboard-system-volume
        - mountPath: /var/lib/grafana/dashboards/cluster
          name: dashboard-cluster-volume
        - mountPath: /var/lib/grafana/dashboards/container
          name: dashboard-container-volume
        - mountPath: /var/lib/grafana/dashboards/addon
          name: dashboard-addon-volume
        - mountPath: /etc/grafana/provisioning/dashboards
          name: config-volume-provisioning
        - mountPath: /etc/grafana/provisioning/datasources
          name: config-volume-provisioning-prometheus 
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: monitoring-grafana-config
      - name: storage
        persistentVolumeClaim:
          claimName: grafana-data
      - name: dashboard-system-volume
        configMap:
          defaultMode: 420
          name: monitoring-grafana-dashboard-system 
      - name: dashboard-cluster-volume
        configMap:
          defaultMode: 420
          name: monitoring-grafana-dashboard-cluster
      - name: dashboard-container-volume
        configMap:
          defaultMode: 420
          name: monitoring-grafana-dashboard-container
      - name: dashboard-addon-volume
        configMap:
          defaultMode: 420
          name: monitoring-grafana-dashboard-addon
      - name: config-volume-provisioning
        configMap:
          defaultMode: 420
          name: monitoring-grafana-config-provisioning
      - name: config-volume-provisioning-prometheus
        configMap:
          defaultMode: 420
          name: monitoring-grafana-config-provisioning-prometheus
