base/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: zcp-system
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    component: grafana 
spec:
  ports:
    - name: grafana 
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    component: grafana
